@@ -3,7 +3,8 @@ Requires
 -
 New features
 ~~~~~~~~~~~~
--
+- Icon Select Widget: renders
+  a voc with a set of icons and a naming convention
 Bug fixes
 ~~~~~~~~~
 -
